--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,34 @@
 body{
-	background: linear-gradient(20deg, #ff512f,#dd2476 );
+	background: linear-gradient(22deg, #ff512f, #dd2476);
+background-size: 400% 400%;
+
+-webkit-animation: Gradient-animation 8s ease infinite;
+-moz-animation: Gradient-animation 8s ease infinite;
+-o-animation: Gradient-animation 8s ease infinite;
+animation: Gradient-animation 8s ease infinite;
+
 	overflow: hidden;
+}
+
+@@-webkit-keyframes Gradient-animation {
+    0%{background-position:0% 60%}
+    50%{background-position:100% 41%}
+    100%{background-position:0% 60%}
+}
+@-moz-keyframes Gradient-animation {
+    0%{background-position:0% 60%}
+    50%{background-position:100% 41%}
+    100%{background-position:0% 60%}
+}
+@-o-keyframes Gradient-animation {
+    0%{background-position:0% 60%}
+    50%{background-position:100% 41%}
+    100%{background-position:0% 60%}
+}
+@keyframes Gradient-animation { 
+    0%{background-position:0% 60%}
+    50%{background-position:100% 41%}
+    100%{background-position:0% 60%}
 }
 
 /* Layout */
